<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.globaltester</groupId>
  <artifactId>org.globaltester.parent</artifactId>
  <version>3.9.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <forceContextQualifier>SNAPSHOT</forceContextQualifier>

    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
	
	<!-- From 3.x on Tycho requires Java 17 as a runtime VM, but you can still compile code for older releases. -->
	<!-- https://github.com/eclipse-tycho/tycho/blob/main/RELEASE_NOTES.md -->
    <!-- <tycho.version>1.2.0</tycho.version> -->
    <!-- <tycho.version>2.7.5</tycho.version> -->
    <tycho.version>4.0.4</tycho.version>
    <tycho.testArgLine>-Xmx3G -Djdk.net.URLClassPath.disableClassPathURLCheck=true</tycho.testArgLine>

    <!-- <jacoco-version>0.7.8</jacoco-version> -->
    <jacoco-version>0.8.11</jacoco-version>
    <jacoco.outputDir>${project.basedir}/../../jacoco</jacoco.outputDir>
    <jacoco.out.utPath>${jacoco.outputDir}/jacoco-ut.exec</jacoco.out.utPath>
    <jacoco.out.itPath>${jacoco.outputDir}/jacoco-it.exec</jacoco.out.itPath>

    <junit.version>4.12</junit.version>
    <maven-surefire.version>2.22.1</maven-surefire.version>
    <argLine>-Xmx3G -Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>

    <sonar-jacoco-listeners.version>4.2.1.6971</sonar-jacoco-listeners.version>
    <sonar.language>java</sonar.language>
    <sonar-maven-plugin.version>3.4.0.905</sonar-maven-plugin.version>
    <sonar.scm.disabled>true</sonar.scm.disabled>
    <sonar.exclusions>**/com4j/**,**/comprion/**,**/*Test.java,**/*rossover*,**/simulator/legacy/**,**/javacard/**,**/javacardx/**,**/gen/**</sonar.exclusions>

    <sonar.jacoco.reportPath>${jacoco.out.utPath}</sonar.jacoco.reportPath>
    <sonar.jacoco.itReportPath>${jacoco.out.itPath}</sonar.jacoco.itReportPath>

  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <id>parse-version</id>
            <phase>validate</phase>
            <goals>
              <goal>parse-version</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-compiler-plugin</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <compilerArgument>-err:-forbidden</compilerArgument>
       	  <compilerArgs>
            <arg>--module-path</arg>
            <arg>${java.home}/jmods</arg>
            <arg>--add-modules</arg>
            <arg>java.smartcardio</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-packaging-plugin</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <format>'nightly'yyyyMMddHHmm</format>
        </configuration>
      </plugin>
      <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-p2-repository-plugin</artifactId>
         <version>${tycho.version}</version>
         <configuration>
            <includeAllDependencies>true</includeAllDependencies>
         </configuration>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
          <executionEnvironment>JavaSE-1.8</executionEnvironment>
          <target>		
            <artifact>
              <groupId>org.globaltester</groupId>
              <artifactId>org.globaltester.parent.target</artifactId>
              <version>${project.parent.version}</version>
            </artifact>
          </target>
          <!-- <pomDependencies>consider</pomDependencies> -->
          <dependency-resolution>
            <extraRequirements>
              <requirement>
                <type>eclipse-plugin</type>
                <id>org.globaltester.lib.jaxws</id>
                <versionRange>0.0.0</versionRange>
              </requirement>
            </extraRequirements>
          </dependency-resolution>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${sonar-maven-plugin.version}</version>
        <configuration>
          <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
          <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
          <sonar.jacoco.reportPath>${jacoco.out.utPath}</sonar.jacoco.reportPath>
          <sonar.jacoco.itReportPath>${jacoco.out.itPath}</sonar.jacoco.itReportPath>
        </configuration>
      </plugin>
    </plugins>
    <finalName>${project.artifactId}-${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}-${forceContextQualifier}</finalName>
  </build>




  <profiles>
    <profile>
      <id>jacoco</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.jacoco</groupId>
            <artifactId>jacoco-maven-plugin</artifactId>
            <version>${jacoco-version}</version>
            <executions>
              <execution>
                <id>pre-unit-test</id>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <configuration>
                  <destFile>${jacoco.out.utPath}</destFile>
                </configuration>
              </execution>
              <execution>
                <id>pre-integration-test</id>
                <goals>
                  <goal>prepare-agent-integration</goal>
                </goals>
                <configuration>
                  <destFile>${jacoco.out.itPath}</destFile>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
